pagina sobre mi - primera version

--- a/html/sobre-mi.html
+++ b/html/sobre-mi.html
@@ -36,10 +36,16 @@
     </header>
 
     <main>
-        <section>
-            <h1>Sobre Mí</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi laborum ex ipsum nihil officiis, ea eligendi quam assumenda iure, voluptates, aut recusandae repellat? Repellendus tenetur cumque, harum iusto necessitatibus vitae.</p>
-            <img class="sobre-mi" src="../assets/sobre-mi/IMG_0986.JPEG" alt="">
+        <h1>Sobre Mí</h1>
+        <section class="flex-container">      
+        <div class="item-sobre-mi-1"><img src="../assets/sobre-mi/IMG_0986.JPEG" alt=""></div>
+        <div class="item-sobre-mi-2"><p class="sobre-mi-parrafo"> Soy un apasionado de la fotografía y el video, sobre todo cuando se trata de documentar y contar historias. 
+ 
+        Me emociona poder generar imágenes que perduren en el tiempo, y generar hermosos recuerdos para mí y para otras personas. 
+            
+        Es un hobby que disfruto mucho y espero se pueda volver una profesión.
+
+        Por ahora comparto mis momentos y recuerdos en esta página y espero que disfruten de mi pasión.</p></div>
         </section>
         
     </main>
