pagina galeria primera edicion

--- a/html/galeria.html
+++ b/html/galeria.html
@@ -36,7 +36,18 @@
     </header>
 
     <main>
-        
+        <h6 class="galeria">Algunas de mis fotos</h6>
+        <div><section class="grid-container-fotos">
+        <img class="foto-galeria" src="../assets/galeria/IMG_0636.JPEG" alt="Foto1">
+        <img class="foto-galeria" src="../assets/galeria/IMG_2778.JPEG" alt="foto2">
+        <img class="foto-galeria" src="../assets/galeria/IMG_3468.JPEG" alt="foto3">
+        <img class="foto-galeria" src="../assets/galeria/IMG_3473_dng.JPEG" alt="foto4">
+        <img class="foto-galeria" src="../assets/galeria/IMG_3474_dng.JPEG" alt="foto5">
+        <img class="foto-galeria" src="../assets/galeria/IMG_3478_dng.JPEG" alt="foto6">
+        <img class="foto-galeria" src="../assets/galeria/IMG_3631.JPEG" alt="foto7">
+        <img class="foto-galeria" src="../assets/galeria/IMG_4028_dng.JPEG" alt="foto8">
+        <img class="foto-galeria" src="../assets/galeria/IMG_2870.JPEG" alt="foto9">
+        </section></div>    
     </main>
 
 
