primera edicion pagina contacto y bootstrap importado

--- a/html/nuestros-servicios.html
+++ b/html/nuestros-servicios.html
@@ -36,7 +36,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="servicios">
             <h6 class="nuestros-servicios">Nuestros Servicios</h6>
             <div class="grid-nuestros-servicios">
                 <a href="#"><img class="foto-nuestros-servicios" src="../assets/fotografia-infantil/IMG_1520.JPEG" alt="Foto-portada-infantil"><p class="subtitulo"><strong>Fotografía infantil</p></strong></a>
